--- a/app/src/main/res/layout/activity_promotion.xml
+++ b/app/src/main/res/layout/activity_promotion.xml
@@ -65,6 +65,7 @@
                             android:layout_marginRight="10dp">
 
                             <TextView
+                                android:id="@+id/tvViewMore1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="right"
@@ -144,7 +145,8 @@
                                 android:paddingBottom="3dp"
                                 android:text="2 km"
                                 android:textColor="#ffffff"
-                                android:textSize="18dp"/>
+                                android:textSize="18dp"
+                                tools:ignore="NotSibling" />
                         </RelativeLayout>
 
                         <HorizontalScrollView
@@ -620,6 +622,7 @@
                             android:layout_marginRight="10dp">
 
                             <TextView
+                                android:id="@+id/tvViewMore2"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="right"
@@ -662,7 +665,7 @@
                                 android:text="Anh Thy Field"
                                 android:textColor="#000000"
                                 android:textSize="18dp"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold"/>
 
                             <ImageView
                                 android:id="@+id/ivLocation2"
@@ -670,7 +673,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@id/tvFieldName2"
                                 android:layout_toRightOf="@id/cvImage2"
-                                android:src="@drawable/outline_location_on_24"></ImageView>
+                                android:src="@drawable/outline_location_on_24"/>
 
                             <TextView
                                 android:id="@+id/tvAddress2"
@@ -681,7 +684,7 @@
                                 android:fontFamily="Roboto"
                                 android:text="Thu Duc city,\nHCMC"
                                 android:textColor="#000000"
-                                android:textSize="18dp"></TextView>
+                                android:textSize="18dp"/>
 
                             <TextView
                                 android:id="@+id/tvDistance2"
@@ -699,7 +702,8 @@
                                 android:paddingBottom="3dp"
                                 android:text="3.5 km"
                                 android:textColor="#ffffff"
-                                android:textSize="18dp"></TextView>
+                                android:textSize="18dp"
+                                tools:ignore="NotSibling" />
 
                         </RelativeLayout>
 
@@ -753,8 +757,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_below="@+id/cvSmallField4"
                                         android:layout_marginLeft="90dp"
-                                        android:layout_marginTop="3dp"
-                                        android:layout_marginLeft="90dp"/>
+                                        android:layout_marginTop="3dp" />
 
                                     <TextView
                                         android:id="@+id/tvRate4"
@@ -897,8 +900,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_below="@+id/cvSmallField5"
                                         android:layout_marginLeft="90dp"
-                                        android:layout_marginTop="3dp"
-                                        android:layout_marginLeft="90dp"/>
+                                        android:layout_marginTop="3dp" />
 
                                     <TextView
                                         android:id="@+id/tvRate5"
@@ -1042,8 +1044,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_below="@+id/cvSmallField6"
                                         android:layout_marginLeft="90dp"
-                                        android:layout_marginTop="3dp"
-                                        android:layout_marginLeft="90dp"/>
+                                        android:layout_marginTop="3dp" />
                                     <TextView
                                         android:id="@+id/tvRate6"
                                         android:layout_width="match_parent"
