--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -1854,14 +1854,39 @@
                         android:layout_margin="5dp"
                         android:orientation="vertical">
 
-                        <TextView
-                            style="@style/FontText"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Bach Hoang Field"
-                            android:textSize="17dp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/FontText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Bach Hoang Field"
+                                android:textSize="17dp"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="55dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_margin="5dp"
+                                app:cardBackgroundColor="#DFA600"
+                                app:cardCornerRadius="2dp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="2dp"
+                                    android:paddingLeft="100dp"
+                                    android:text="2 km"
+                                    android:textColor="@color/white" />
+
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
 
                         <TextView
                             style="@style/FontText"
@@ -1906,14 +1931,39 @@
                         android:layout_margin="5dp"
                         android:orientation="vertical">
 
-                        <TextView
-                            style="@style/FontText"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Truong Kha Field"
-                            android:textSize="17dp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/FontText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Truong Kha Field"
+                                android:textSize="17dp"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="55dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_margin="5dp"
+                                app:cardBackgroundColor="#DFA600"
+                                app:cardCornerRadius="2dp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="2dp"
+                                    android:paddingLeft="100dp"
+                                    android:text="2.7 km"
+                                    android:textColor="@color/white" />
+
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
 
                         <TextView
                             style="@style/FontText"
@@ -1958,14 +2008,39 @@
                         android:layout_margin="5dp"
                         android:orientation="vertical">
 
-                        <TextView
-                            style="@style/FontText"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Ba Trieu Field"
-                            android:textSize="17dp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/FontText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ba Trieu Field"
+                                android:textSize="17dp"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="55dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_margin="5dp"
+                                app:cardBackgroundColor="#DFA600"
+                                app:cardCornerRadius="2dp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="2dp"
+                                    android:paddingLeft="100dp"
+                                    android:text="1.9 km"
+                                    android:textColor="@color/white" />
+
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
 
                         <TextView
                             style="@style/FontText"
