--- a/app/src/main/res/layout/fragment_history_now.xml
+++ b/app/src/main/res/layout/fragment_history_now.xml
@@ -3,41 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="15dp"
     android:background="#EFF1FE"
     android:orientation="vertical"
     tools:context=".fragments.HistoryNowFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="359dp"
+        android:layout_height="329dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:background="#FFFFFF"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="0dp"
+                android:layout_width="243dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="Duy Hoang Field"
+                android:textColor="#000000"
                 android:textSize="22sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="304dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="#FFFFFF"
+            android:layout_height="239dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -53,7 +54,7 @@
                     android:src="@drawable/image_1" />
 
                 <LinearLayout
-                    android:layout_width="204dp"
+                    android:layout_width="166dp"
                     android:layout_height="106dp"
                     android:layout_marginLeft="5dp"
                     android:orientation="vertical">
@@ -63,6 +64,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Field A"
+                        android:textColor="#000000"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -85,6 +87,7 @@
                             android:gravity="bottom|top"
                             android:text="5"
                             android:textAlignment="textStart"
+                            android:textColor="#000000"
                             android:textSize="14sp"
                             tools:ignore="RtlCompat" />
 
@@ -108,17 +111,9 @@
                             android:layout_weight="1"
                             android:gravity="bottom|top"
                             android:text="HCMC"
+                            android:textColor="#000000"
                             android:textSize="14sp" />
                     </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tvDiscount"
-                        android:layout_width="match_parent"
-                        android:layout_height="29dp"
-                        android:layout_marginLeft="2dp"
-                        android:gravity="bottom|top"
-                        android:text="-20%"
-                        android:textColor="#D61313" />
 
                 </LinearLayout>
 
@@ -135,7 +130,8 @@
                     android:layout_width="71dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Booking Date"
+                    android:text="Booking Date:"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
 
                 <TextView
@@ -145,6 +141,7 @@
                     android:layout_weight="1"
                     android:text="28/09/2021"
                     android:textAlignment="textEnd"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -153,72 +150,74 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="TimePicker"
-                android:textAlignment="center" />
+                android:text="Time picker:"
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textStyle="bold" />
 
-            <TableLayout
+            <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:layout_marginTop="5dp">
+                android:layout_height="wrap_content">
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="127dp"
+                    android:layout_height="wrap_content"
+                    android:text="15h-16h"
+                    android:textAlignment="center"
+                    android:textColor="#000000" />
 
-                    <TextView
-                        android:id="@+id/textView21"
-                        android:layout_width="181dp"
-                        android:layout_height="wrap_content"
-                        android:text="15h-16h"
-                        android:textAlignment="center" />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="59dp"
+                    android:layout_height="wrap_content"
+                    android:text="$7"
+                    android:textAlignment="textEnd"
+                    android:textColor="#FD0000" />
 
-                    <View
-                        android:id="@+id/divider4"
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/black" />
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="129dp"
+                    android:layout_height="wrap_content"
+                    android:text="$5.6"
+                    android:textAlignment="center"
+                    android:textColor="#000000" />
+            </TableRow>
 
-                    <TextView
-                        android:id="@+id/textView22"
-                        android:layout_width="188dp"
-                        android:layout_height="wrap_content"
-                        android:text="$7"
-                        android:textAlignment="center" />
-                </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="23dp">
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="127dp"
+                    android:layout_height="wrap_content"
+                    android:text="16h-17h"
+                    android:textAlignment="center"
+                    android:textColor="#000000" />
 
-                    <TextView
-                        android:id="@+id/textView23"
-                        android:layout_width="181dp"
-                        android:layout_height="wrap_content"
-                        android:text="16h-17h"
-                        android:textAlignment="center" />
+                <TextView
+                    android:id="@+id/textView24"
+                    android:layout_width="58dp"
+                    android:layout_height="wrap_content"
+                    android:text="$7"
+                    android:textAlignment="textEnd"
+                    android:textColor="#FF0000" />
 
-                    <View
-                        android:id="@+id/divider5"
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/black" />
-
-                    <TextView
-                        android:id="@+id/textView24"
-                        android:layout_width="188dp"
-                        android:layout_height="wrap_content"
-                        android:text="$7"
-                        android:textAlignment="center" />
-                </TableRow>
-
-
-            </TableLayout>
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="131dp"
+                    android:layout_height="wrap_content"
+                    android:text="$5.6"
+                    android:textAlignment="center"
+                    android:textColor="#000000" />
+            </TableRow>
 
             <View
-                android:id="@+id/divider6"
+                android:id="@+id/divider9"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="?android:attr/listDivider" />
 
             <TableRow
                 android:layout_width="match_parent"
@@ -229,55 +228,40 @@
                     android:layout_width="181dp"
                     android:layout_height="wrap_content"
                     android:text="Total"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/divider7"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:id="@+id/textView26"
-                    android:layout_width="93dp"
-                    android:layout_height="wrap_content"
-                    android:text="$14"
-                    android:textAlignment="center"
-                    android:textColor="#F40606"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView27"
-                    android:layout_width="92dp"
+                    android:layout_width="134dp"
                     android:layout_height="wrap_content"
                     android:text="$11.2"
                     android:textAlignment="center"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="start|end"
-                android:textAlignment="center"
-                tools:ignore="RtlCompat">
-
-                <Button
-                    android:id="@+id/btnDelete"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="80dp"
-                    android:layout_marginTop="30dp"
-                    android:backgroundTint="#F13232"
-                    android:minHeight="50dp"
-                    android:text="Cancel"
-                    android:textAlignment="center" />
             </TableRow>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:gravity="start|end"
+            android:textAlignment="center"
+            tools:ignore="RtlCompat">
 
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="80dp"
+                android:backgroundTint="#F13232"
+                android:minHeight="50dp"
+                android:text="Cancel"
+                android:textAlignment="center" />
+        </TableRow>
+
+    </LinearLayout>
 
 </LinearLayout>
