--- a/app/src/main/res/layout/fragment_history_past.xml
+++ b/app/src/main/res/layout/fragment_history_past.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="607dp"
+        android:layout_height="674dp"
         android:layout_marginTop="15dp"
         android:background="#FFFFFF"
         android:orientation="vertical">
@@ -27,13 +27,14 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="Duy Hoang Field"
+                android:textColor="#000000"
                 android:textSize="22sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="304dp"
+            android:layout_height="251dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:orientation="vertical">
@@ -61,6 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Field A"
+                        android:textColor="#000000"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -83,6 +85,7 @@
                             android:gravity="bottom|top"
                             android:text="5"
                             android:textAlignment="textStart"
+                            android:textColor="#000000"
                             android:textSize="14sp"
                             tools:ignore="RtlCompat" />
 
@@ -106,17 +109,9 @@
                             android:layout_weight="1"
                             android:gravity="bottom|top"
                             android:text="HCMC"
+                            android:textColor="#000000"
                             android:textSize="14sp" />
                     </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tvDiscount"
-                        android:layout_width="match_parent"
-                        android:layout_height="29dp"
-                        android:layout_marginLeft="2dp"
-                        android:gravity="bottom|top"
-                        android:text="-20%"
-                        android:textColor="#D61313" />
 
                 </LinearLayout>
 
@@ -134,6 +129,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="Booking Date"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
 
                 <TextView
@@ -143,6 +139,7 @@
                     android:layout_weight="1"
                     android:text="28/09/2021"
                     android:textAlignment="textEnd"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -152,7 +149,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="TimePicker"
-                android:textAlignment="center" />
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textStyle="bold" />
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -169,12 +168,6 @@
                         android:layout_height="wrap_content"
                         android:text="15h-16h"
                         android:textAlignment="center" />
-
-                    <View
-                        android:id="@+id/divider4"
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/black" />
 
                     <TextView
                         android:id="@+id/textView22"
@@ -195,12 +188,6 @@
                         android:text="16h-17h"
                         android:textAlignment="center" />
 
-                    <View
-                        android:id="@+id/divider5"
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/black" />
-
                     <TextView
                         android:id="@+id/textView24"
                         android:layout_width="188dp"
@@ -216,7 +203,7 @@
                 android:id="@+id/divider6"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="?android:attr/listDivider"/>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -228,13 +215,8 @@
                     android:layout_height="wrap_content"
                     android:text="Total"
                     android:textAlignment="center"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/divider7"
-                    android:layout_width="1dp"
-                    android:layout_height="20dp"
-                    android:background="@color/black" />
 
                 <TextView
                     android:id="@+id/textView26"
@@ -251,35 +233,9 @@
                     android:layout_height="wrap_content"
                     android:text="$11.2"
                     android:textAlignment="center"
+                    android:textColor="#000000"
                     android:textStyle="bold" />
             </TableRow>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/btnEdit"
-                    android:layout_width="72dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#4285E9"
-                    android:text="Edit" />
-
-                <Button
-                    android:id="@+id/btnCancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#F13232"
-                    android:text="Delete" />
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -302,6 +258,7 @@
                 android:layout_marginRight="30dp"
                 android:background="#ffffff"
                 android:numStars="5"
+                android:progressTint="#ffc516"
                 tools:ignore="SpeakableTextPresentCheck" />
         </androidx.cardview.widget.CardView>
 
@@ -313,7 +270,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="247dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
@@ -323,6 +280,7 @@
                 android:layout_height="32dp"
                 android:layout_marginLeft="10dp"
                 android:text="Comment"
+                android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -347,12 +305,13 @@
                     android:layout_weight="1"
                     android:gravity="bottom|top"
                     android:text="You"
+                    android:textColor="#000000"
                     android:textSize="16sp" />
             </LinearLayout>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="69dp"
+                android:layout_height="131dp"
                 android:layout_marginTop="5dp">
 
                 <EditText
